[gd_scene load_steps=11 format=2]

[ext_resource path="res://png/Objects/mashineBox.png" type="Texture" id=1]
[ext_resource path="res://png/Objects/mashineScreen.png" type="Texture" id=2]
[ext_resource path="res://objects/OutputDoor.tscn" type="PackedScene" id=3]
[ext_resource path="res://png/Objects/mashineSign2.png" type="Texture" id=4]
[ext_resource path="res://objects/GameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/VendingMashine.gd" type="Script" id=6]
[ext_resource path="res://objects/Resource.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/animations/sign_close_anim.tres" type="Animation" id=8]
[ext_resource path="res://assets/animations/sign_open_anim.tres" type="Animation" id=9]
[ext_resource path="res://objects/ItemHolder.tscn" type="PackedScene" id=10]

[node name="VendingMashine" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )
spawn_scene = ExtResource( 7 )

[node name="OutputDoor" parent="." instance=ExtResource( 3 )]
position = Vector2( 108.607, 99.1633 )

[node name="mashineScreen" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Screen" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -44.4602
margin_top = -24.4327
margin_right = 2.53978
margin_bottom = -10.4327
rect_scale = Vector2( 4.34178, 3.89832 )
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignDoor" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="mashineBox" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="GameButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 95.3102, 113.395 )
scale = Vector2( 1.83157, 1.83157 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = ExtResource( 8 )
anims/open = ExtResource( 9 )

[node name="BatterySocket" parent="." instance=ExtResource( 10 )]
position = Vector2( -4.0498, -128.283 )
scale = Vector2( 2, 2 )
accepted_node_group = "batteries"
[connection signal="state_change" from="GameButton" to="." method="_on_GameButton_state_change"]
[connection signal="attached" from="BatterySocket" to="." method="_on_BatterySocket_attached"]
[connection signal="detached" from="BatterySocket" to="." method="_on_BatterySocket_detached"]
